Ayush | Did home page UI changes

--- a/crowdsource-ui/src/views/home.ejs
+++ b/crowdsource-ui/src/views/home.ejs
@@ -27,6 +27,14 @@
 <div class="container-fluid supreme-container">
     <div class="row">
         <div class="col-12 col-md-8 col-lg-10 offset-lg-1 mt-4">
+            <div class="ml-4" style="padding:20px;background:rgba(223,236,251,.3);border-left:10px solid #dfecfb">
+                <h3> <%= __('Bolo India') %></h3>
+                <p> <%= __('India Help your language by donating your voice') %></p>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12 col-md-8 col-lg-10 offset-lg-1 mt-4">
             <nav class="navbar navbar-expand-lg navbar-light bg-white px-4" id="contribution_lang_navbar">
                 <div class="mx-2">
                     <%= __('Select the language for voluntary contribution') %>:
