--- a/crowdsource-ui/src/views/home.ejs
+++ b/crowdsource-ui/src/views/home.ejs
@@ -29,7 +29,7 @@
         <div class="col-12 col-md-8 col-lg-10 offset-lg-1 mt-4">
             <div class="ml-4" style="padding:20px;background:rgba(223,236,251,.3);border-left:10px solid #dfecfb">
                 <h3> <%= __('Bolo India') %></h3>
-                <p> <%= __('India Help your language by donating your voice') %></p>
+                <p> <%= __('Help your language by donating your voice') %></p>
             </div>
         </div>
     </div>
