| Priyanshu + Sreejith + Ayush | fix textArea issues for sunoIndia

--- a/crowdsource-ui/src/views/modules/sunoIndia/validation/validator-prompt-page.ejs
+++ b/crowdsource-ui/src/views/modules/sunoIndia/validation/validator-prompt-page.ejs
@@ -84,7 +84,7 @@
                 <div class="col-md-8 col-sm-10 text-center align-items-center"><label class="h1 font-weight-bold my-5">
                         <%= __('Thank you for validating!') %>
                     </label>
-                    <p>
+                    <p class="d-none">
                         <%- __('You have helped us validate <span id="spn-validation-count" class="font-wt-900"></span> recordings') %>
                     </p>
                     <div class="row justify-content-center mb-3 mx-2">
