--- a/crowdsource-ui/src/views/common/card/cards.ejs
+++ b/crowdsource-ui/src/views/common/card/cards.ejs
@@ -17,7 +17,7 @@
             <div>
                 <%= __(left.p1) %>
             </div>
-            <div class="col-5 col-lg-5 col-xl-4" id="left-loader">
+            <div class="col-5 col-lg-5 col-xl-4 d-none" id="left-loader">
                 <div><span class="spinner"></span></div>
             </div>
             <div id="left-p-3" class="font-wt-900 mt-2 mt-lg-2"></div>
@@ -41,7 +41,7 @@
             <div>
                 <%= __(right.p1) %>
             </div>
-            <div class="col-7 col-lg-6 col-xl-6" id="right-loader">
+            <div class="col-7 col-lg-6 col-xl-6 d-none" id="right-loader">
                 <div><span class="spinner"></span></div>
             </div>
             <div id="right-p-3" class="font-wt-900 mt-2 mt-lg-2"></div>
