--- a/crowdsource-ui/src/views/modules/sunoIndia/home/home.ejs
+++ b/crowdsource-ui/src/views/modules/sunoIndia/home/home.ejs
@@ -38,7 +38,7 @@
         <%- include ../common/languageNavBar.ejs %>
     </div>
     <div class="m-auto row justify-content-center mt-lg-5 mx-lg-5">
-        <%- include('../common/cards.ejs',{left:{h1:"Transcribe",h2:"Type what you hear","p1":"Contribute your voice to create an open data repository of Indian languages",img:"../../img/listen2.svg"},right:{h1:"Correct",h2:"Correct text as per the audio","p1":"Help us by validating the recordings that others have contributed",img:"../../img/validate.svg"}}); %>
+        <%- include('../common/cards.ejs',{left:{h1:"Transcribe",h2:"Type what you hear","p1":"",img:"../../img/listen2.svg"},right:{h1:"Correct",h2:"Correct text as per the audio","p1":"",img:"../../img/validate.svg"}}); %>
     </div>
     <div class="row">
         <div class="col-12 col-md-7 col-lg-6 ml-lg-auto p-5 mt-4 text-dark">
