Ayush | Did some UI design changes acc to mobile

--- a/crowdsource-ui/src/assets/css/record.css
+++ b/crowdsource-ui/src/assets/css/record.css
@@ -473,7 +473,13 @@ audio {
   .record-btn-container {
     flex-direction: column-reverse;
     align-items: flex-end;
+    display: -webkit-box;
   }
+
+  #cancel-edit-button > svg {
+    height: 50px;
+    width: 100px;
+}
   
   .only-display {
     display: none;
