--- a/crowdsource-ui/src/views/modules/sunoIndia/record/record.css
+++ b/crowdsource-ui/src/views/modules/sunoIndia/record/record.css
@@ -424,6 +424,7 @@ body {
     .record-btn-container {
       flex-direction: column-reverse;
       align-items: flex-end;
+      display: -webkit-box;
     }
     
     .only-display {
