--- a/crowdsource-ui/src/views/modules/sunoIndia/validation/validator-prompt-page.ejs
+++ b/crowdsource-ui/src/views/modules/sunoIndia/validation/validator-prompt-page.ejs
@@ -23,7 +23,7 @@
 <div id="validator-page-content">
     <div class="container-fluid">
         <div id="content-wrapper" class="d-flex flex-column">
-            <div class="d-flex justify-content-end pt-3 record-btn-container">
+            <div class="modal-footer pt-3 record-btn-container">
                 <%- include ../common/report-btn.ejs %>
                 <%- include ../common/speakerTestBtn.ejs %>
             </div>
