--- a/crowdsource-ui/src/assets/css/validator-prompt.css
+++ b/crowdsource-ui/src/assets/css/validator-prompt.css
@@ -33,6 +33,10 @@ a{
     border: 2px solid #007BFF;
 }
 
+.text-area {
+    border-radius: 12px !important;
+}
+
 #edit-text textarea {
     border: none;
     padding: 0;
@@ -76,6 +80,28 @@ a{
     .record-btn-container {
         flex-direction: column-reverse;
         align-items: flex-end;
+        display: -webkit-box;
+    }
+    .record-btn-container .test-mic-speaker {
+        margin-top: 15px;
+    }
+    #cancel-edit-button > svg {
+        height: 80px;
+        width: 160px;
+    }
+    
+    #submit-edit-button > svg {
+        height: 80px;
+        width: 160px;
+    }
+
+    #need_change > svg {
+        height: 80px;
+        width: 160px;
+    }
+    #like_button > svg {
+        height: 80px;
+        width: 160px;
     }
 }
 
