--- a/crowdsource-ui/src/views/modules/sunoIndia/record/record.ejs
+++ b/crowdsource-ui/src/views/modules/sunoIndia/record/record.ejs
@@ -87,10 +87,10 @@
       </div>
       <div class="row justify-content-center mb-lg-7 mb-md-7 mb-sm-1 mx-5 mt-5" id="validation-button-row">
         <div class="col-lg-8 col-md-8 flex-lg-row flex-md-row flex-column-reverse d-flex d-flex flex-row flex-wrap flex-lg-nowrap flex-md-nowrap justify-content-around mt-2">
-          <button class="w-100 btn align-self-start mb-2" id="cancel-edit-button">
+          <button class="w-100 btn align-self-start mb-2" disabled="disabled" id="cancel-edit-button">
             <svg width="208" height="66" viewBox="0 0 208 66" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M1 33C1 15.3269 15.3269 1 33 1H175C192.673 1 207 15.3269 207 33C207 50.6731 192.673 65 175 65H33C15.3269 65 1 50.6731 1 33Z" fill="white" stroke="#007BFF" stroke-width="2"/>
-              <text x="65" y="43" font-family="lato" font-size="24" fill="#343A40" style="text-align:center">
+              <text x="65" y="43" font-family="lato" font-size="24" fill="#343A40" disabled="disabled" style="text-align:center">
                 <%= __('Cancel') %>
               </text>
             </svg>
