| Priyanshu| extract stats row and moduleIntro component for homepage

--- a/crowdsource-ui/src/views/common/header.ejs
+++ b/crowdsource-ui/src/views/common/header.ejs
@@ -16,6 +16,12 @@
             <li class="nav-item module-item p-2" value="suno"><a href="<%= suno %>" class="nav-link text-dark font-weight-bold">
                     <%= __('Suno India') %>
                 </a></li>
+            <li class="nav-item module-item p-2" value="suno"><a href="<%= likho %>" class="nav-link text-dark font-weight-bold">
+                    <%= __('Likho India') %>
+                </a></li>
+            <li class="nav-item module-item p-2" value="suno"><a href="<%= dekho %>" class="nav-link text-dark font-weight-bold">
+                    <%= __('Dekho India') %>
+                </a></li>
         </ul>
         <ul class="navbar-nav ml-auto">
             <li class="nav-item p-2 dropdown" id="locale_language_dropdown">
