--- a/crowdsource-ui/src/views/modules/sunoIndia/dashboard/dashboard.ejs
+++ b/crowdsource-ui/src/views/modules/sunoIndia/dashboard/dashboard.ejs
@@ -56,31 +56,8 @@
                 <div><span class="spinner"></span></div>
             </div>
             <div class="row text-center contribution-details d-none" id="contribution-details">
-                <div class="contribution-data d-none" id="languages-wrapper">
-                    <p class="mb-1" id="languages-value"></p>
-                    <p class="mb-0">
-                        <%= __('languages contributed') %>
-                    </p>
-                </div>
-                <div class="contribution-data">
-                    <p class="mb-1" id="speaker-value"></p>
-                    <p class="mb-0">
-                        <%= __('speakers contributed') %>
-                    </p>
-                </div>
-                <div class="contribution-data">
-                    <p class="mb-1" id="contributed-value"></p>
-                    <p class="mb-0">
-                        <%= __('hours recorded') %>
-                    </p>
-                </div>
-                <div class="contribution-data">
-                    <p class="mb-1" id="validated-value"></p>
-                    <p class="mb-0">
-                        <%= __('hours validated') %>
-                    </p>
-                </div>
-            </div>
+                <%- include('../common/contributionStats.ejs',{labels :['Languages','People participated','Hrs transcribed','Hrs corrected']})%>
+</div>
         </div>
     </div>
     <div class="row chart-row">
