--- a/crowdsource-ui/src/views/modules/dekhoIndia/home/home.ejs
+++ b/crowdsource-ui/src/views/modules/dekhoIndia/home/home.ejs
@@ -27,6 +27,9 @@
 <%- include('../common/header.ejs',{bolo:"../home.html", suno:"../sunoIndia/home.html",likho:"./likhoIndia/home.html",dekho:"./home.html",path:"../"}); %>
 <div class="container-fluid supreme-container">
     <div class="row">
+        <%- include('../common/moduleIntro.ejs',{name:'DEKHO India',intro:'Help your language by labelling images'}); %>
+    </div>
+    <div class="row">
         <%- include ../common/languageNavBar.ejs %>
     </div>
     <div class="m-auto row justify-content-center mt-lg-5 mx-lg-5">
