--- a/crowdsource-ui/src/views/modules/likhoIndia/dashboard/dashboard.ejs
+++ b/crowdsource-ui/src/views/modules/likhoIndia/dashboard/dashboard.ejs
@@ -56,30 +56,7 @@
                 <div><span class="spinner"></span></div>
             </div>
             <div class="row text-center contribution-details d-none" id="contribution-details">
-                <div class="contribution-data d-none" id="languages-wrapper">
-                    <p class="mb-1" id="languages-value"></p>
-                    <p class="mb-0">
-                        <%= __('languages contributed') %>
-                    </p>
-                </div>
-                <div class="contribution-data">
-                    <p class="mb-1" id="speaker-value"></p>
-                    <p class="mb-0">
-                        <%= __('speakers contributed') %>
-                    </p>
-                </div>
-                <div class="contribution-data">
-                    <p class="mb-1" id="contributed-value"></p>
-                    <p class="mb-0">
-                        <%= __('hours recorded') %>
-                    </p>
-                </div>
-                <div class="contribution-data">
-                    <p class="mb-1" id="validated-value"></p>
-                    <p class="mb-0">
-                        <%= __('hours validated') %>
-                    </p>
-                </div>
+                <%- include('../common/contributionStats.ejs',{labels :['Language pairs','People participated','Translations done','Translations corrected']})%>
             </div>
         </div>
     </div>
