| Priyanshu | add static thankyou page to sunoIndia contribution page

--- a/crowdsource-ui/src/views/common/contributionStats/contributionStats.ejs
+++ b/crowdsource-ui/src/views/common/contributionStats/contributionStats.ejs
@@ -1,3 +1,4 @@
+<link rel="preload" as="style" onload='this.onload=null,this.rel="stylesheet"' type="text/css" href="../../css/common/contributionStats.css">
 <div class="contribution-data d-none" id="languages-wrapper">
     <p class="mb-1" id="languages-value"></p>
     <p class="mb-0">
@@ -22,3 +23,4 @@
         <%= __(labels[3]) %>
     </p>
 </div>
+<script src="../../js/common/contributionStats.js"></script>
