--- a/crowdsource-ui/src/views/common/header/header.ejs
+++ b/crowdsource-ui/src/views/common/header/header.ejs
@@ -16,10 +16,10 @@
             <li class="nav-item module-item p-2" value="suno"><a href="<%= suno %>" class="nav-link text-dark font-weight-bold">
                     <%= __('Suno India') %>
                 </a></li>
-            <li class="nav-item module-item p-2" value="suno"><a href="<%= likho %>" class="nav-link text-dark font-weight-bold">
+            <li class="nav-item module-item p-2" value="likho"><a href="<%= likho %>" class="nav-link text-dark font-weight-bold">
                     <%= __('Likho India') %>
                 </a></li>
-            <li class="nav-item module-item p-2" value="suno"><a href="<%= dekho %>" class="nav-link text-dark font-weight-bold">
+            <li class="nav-item module-item p-2" value="dekho"><a href="<%= dekho %>" class="nav-link text-dark font-weight-bold">
                     <%= __('Dekho India') %>
                 </a></li>
         </ul>
