--- a/crowdsource-ui/src/views/modules/sunoIndia/record/record.ejs
+++ b/crowdsource-ui/src/views/modules/sunoIndia/record/record.ejs
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simple-keyboard@latest/build/css/index.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/notyf@3.7.0/notyf.min.css" integrity="sha256-1T9PQaTbbUusCVH72ahoGVZ1axGmU5uAOgSb4/GNXj8=" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="../../css/sunoIndia/record.css">
   <link rel="stylesheet" type="text/css" href="../../css/validator-prompt.css">
   <link rel="stylesheet" type="text/css" href="../../css/common.css">
   <link rel="stylesheet" type="text/css" href="../../css/mic-speaker-testing.css">
@@ -23,6 +24,7 @@
 <div id="validator-page-content">
   <div class="container-fluid">
     <div id="content-wrapper" class="d-flex flex-column">
+      <%- include ../common/recording-instructions.ejs %>
       <div class="modal-footer pt-3 record-btn-container">
         <%- include ../common/report-btn.ejs %>
         <%- include ../common/speakerTestBtn.ejs %>
