Ayush | Done with functional flow of dekho india

--- a/crowdsource-ui/src/assets/css/validator-prompt.css
+++ b/crowdsource-ui/src/assets/css/validator-prompt.css
@@ -114,3 +114,14 @@ a{
 }
 
 
+
+.arrow-right {
+    width: 0; 
+    height: 0; 
+    border-top: 8px solid transparent;
+    border-bottom: 8px solid transparent;
+    position: absolute;
+    left: 0;
+    top: 20px;
+    border-left: 8px solid #343A40;
+  }
