--- a/crowdsource-ui/src/views/modules/dekhoIndia/record/record.ejs
+++ b/crowdsource-ui/src/views/modules/dekhoIndia/record/record.ejs
@@ -25,35 +25,23 @@
         <div id="content-wrapper" class="d-flex flex-column">
             <div class="modal-footer pt-3 record-btn-container">
                 <%- include ../common/report-btn.ejs %>
-                <%- include ../common/speakerTestBtn.ejs %>
             </div>
             <div class="row justify-content-around mx-3 mx-lg-0 mx-xl-5 mb-2 align-items-center">
                 <%- include ../common/speakerTesting.ejs %>
             </div>
-            <div class="row" id="instructive-msg">
-                <div class="col-12 justify-content-center text-center">
-                    <%- __('Does the audio match the sentence?') %>
+            <div class="row justify-content-center" id="instructive-msg">
+                <div class="col-12 justify-content-center text-center" style="color:#959595;font-style:italic">
+                    <%- __('Type the text from the following image in the box') %>
                 </div>
             </div>
-            <div class="row justify-content-center mt-lg-3 mt-1" id="audio-row">
-                <div class="col-12 justify-content-center text-center">
-                    <audio id="my-audio" controls tabindex="-1" src="" type="audio/wav" controlslist="nodownload" crossorigin="anonymous" class="pointer-event"></audio>
+            <div class="row justify-content-center" id="dekho-image">
+                <div class="col-lg-8 col-md-5 col-12">
+                    <%- include ../common/image.ejs %>
                 </div>
             </div>
-
-            <div class="row justify-content-center mb-5 mb-lg-0 mt-5" id="sentences-row">
-                <div class="col-md-8 col-sm-10 text-center prompt"><label class="h1 font-weight-normal" id="sentenceLabel"></label></div>
-            </div>
-            <div class="row justify-content-center mb-5 mb-lg-0 mt-5 d-none" id="editor-row">
-                <div class="col-lg-5 col-md-5 col-12 original-text">
-                    <label><%- __('Original Text')%></label>
-                    <div id="original-text">
-
-                    </div>
-                </div>
-                <div class="form-group green-border-focus col-lg-5 col-md-5 col-12 m-0" id="edit-text">
-                    <label><%- __('Your Edit') %></label>
-                    <div class="arrow-right"></div>
+            <div class="row m-0 justify-content-center mb-5 mb-lg-0 mt-5" id="textarea-row">
+                <div class="form-group green-border-focus col-lg-8 col-md-5 col-12 m-0" id="edit-text" style="border-radius:12px">
+                    <label><%- __('Add Text') %></label>
                     <textarea class="form-control edit-area" id="edit" rows="3"></textarea>
                 </div>
             </div>
@@ -63,23 +51,8 @@
                     <label class="text-primary ml-2" style="font-size:28px;vertical-align:middle">Thank you for correcting!</label>
                 </div>
             </div>
-            <div class="row justify-content-center mb-5 mb-lg-0 mt-lg-5 d-none" id="no-sentences-row">
-                <div class="col-md-8 col-sm-10 text-center"><label class="h1 font-weight-bold">
-                        <%= __('Thank you for your enthusiasm to validate the recordings.') %>
-                    </label><br><br>
-                    <p>
-                        <%- __('We do not have any data in <span id="spn-validation-language"></span> language. Please try again later.') %>
-                    </p>
-                    <p>
-                        <%= __('Would you also like to contribute your voice?') %>
-                    </p>
-                    <div class="row justify-content-center mt-5">
-                        <div class="col-lg-3 col-md-6 col-8 text-center lead" id="start_contributing_id">
-                            <a class="btn btn-primary text-white btn-lg h6 w-100">
-                                <%- __('Start Contributing in <span id="start-validation-language"></span>') %>
-                            </a></div>
-                    </div>
-                </div>
+            <div class="row justify-content-center mb-5 mb-lg-0 mt-lg-5 d-none" id="no-textarea-row">
+                <%- include ../common/noDataFound.ejs %>
             </div>
             <div class="row justify-content-center my-auto my-3 d-none" id="thank-you-row">
                 <div class="col-md-8 col-sm-10 text-center align-items-center"><label class="h1 font-weight-bold my-5">
@@ -99,16 +72,7 @@
             </div>
             <div class="row justify-content-center mb-lg-7 mb-md-7 mb-sm-1 mx-5 mt-5" id="validation-button-row">
                 <div class="col-lg-8 col-md-8 flex-lg-row flex-md-row flex-column d-flex d-flex flex-row flex-wrap flex-lg-nowrap flex-md-nowrap justify-content-around mt-2">
-                    <button class="w-100 btn align-self-start mb-2" disabled="disabled" id="need_change">
-                        <svg width="245" height="66" viewBox="0 0 245 66" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M1 33C1 15.3269 15.3269 1 33 1H212C229.673 1 244 15.3269 244 33C244 50.6731 229.673 65 212 65H33C15.3269 65 1 50.6731 1 33Z" fill="white" stroke="#007BFF" stroke-width="2"/>
-                            <path d="M38.06 30.02L38.98 30.94L29.92 40H29V39.08L38.06 30.02ZM41.66 24C41.41 24 41.15 24.1 40.96 24.29L39.13 26.12L42.88 29.87L44.71 28.04C45.1 27.65 45.1 27.02 44.71 26.63L42.37 24.29C42.17 24.09 41.92 24 41.66 24ZM38.06 27.19L27 38.25V42H30.75L41.81 30.94L38.06 27.19Z" fill="#007BFF"/>
-                            <text x="60" y="43" font-family="lato" font-size="24" fill="#007BFF" style="text-align:center">
-                                <%= __('Needs Change') %>
-                            </text>
-                        </svg>
-                    </button>
-                    <button class="w-100 btn align-self-start mb-2 d-none" id="cancel-edit-button">
+                    <button class="w-100 btn align-self-start mb-2" id="cancel-edit-button">
                         <svg width="208" height="66" viewBox="0 0 208 66" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M1 33C1 15.3269 15.3269 1 33 1H175C192.673 1 207 15.3269 207 33C207 50.6731 192.673 65 175 65H33C15.3269 65 1 50.6731 1 33Z" fill="white" stroke="#007BFF" stroke-width="2"/>
                             <text x="65" y="43" font-family="lato" font-size="24" fill="#343A40" style="text-align:center">
@@ -119,28 +83,7 @@
                     <div class="row justify-content-center mx-2" id="loader-play-btn">
                         <div><span class="spinner w-h-5"></span></div>
                     </div>
-                    <div class="align-items-center justify-content-center align-items-center mb-2" id="audio-player-btn">
-                        <div class="audioplayer d-flex justify-content-center align-items-center"><img src="../../img/play.svg" alt="play" id="play" class="cursor-pointer"> <img src="../../img/pause.svg" alt="pause" id="pause" class="d-none cursor-pointer"> <img src="../../img/replay.svg" alt="replay" id="replay" class="d-none justify-self-center cursor-pointer"></div>
-                        <h3 class="font-wt-800 text-center mt-2" id="audioplayer-text_play">
-                            <%= __('Play') %>
-                        </h3>
-                        <h3 class="font-wt-800 text-center d-none mt-2" id="audioplayer-text_replay">
-                            <%= __('Replay') %>
-                        </h3>
-                        <h3 class="font-wt-800 text-center d-none mt-2" id="audioplayer-text_pause">
-                            <%= __('Pause') %>
-                        </h3>
-                    </div>
-                    <button class="btn align-self-start mb-2 w-100" disabled="disabled" id="like_button">
-                        <svg width="208" height="66" viewBox="0 0 208 66" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <rect x="1" y="1" width="206" height="64" rx="32" fill="white" stroke="#007BFF" stroke-width="2"/>
-                            <path d="M34.5 37.5L42 43.5L57.5 26" stroke="#007BFF" stroke-width="3" stroke-linecap="round"/>
-                            <text x="80" y="43" font-family="lato" font-size="24" fill="#007BFF" style="text-align:center">
-                                <%= __('Correct') %>
-                            </text>
-                        </svg>
-                    </button>
-                    <button class="btn align-self-start mb-2 w-100 d-none" disabled="disabled" id="submit-edit-button">
+                    <button class="btn align-self-start mb-2 w-100" id="submit-edit-button">
                         <svg width="208" height="66" viewBox="0 0 208 66" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <rect width="208" height="66" rx="33" fill="#D7D7D7"/>
                             <text x="65" y="43" font-family="lato" font-size="24" fill="white" style="text-align:center">
@@ -182,7 +125,7 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/simple-keyboard@latest/build/index.js"></script>
 
-        <script src="../../js/sunoIndia/validator-prompt-page.js"></script>
+        <script src="../../js/dekhoIndia/record.js"></script>
         <script src="../../js/common/speakerTesting.js"></script>
     </div>
 </div>
