--- a/crowdsource-ui/src/views/modules/dekhoIndia/validation/validator-prompt-page.ejs
+++ b/crowdsource-ui/src/views/modules/dekhoIndia/validation/validator-prompt-page.ejs
@@ -45,14 +45,15 @@
             </div>
             </div>
             
-            <div class="row justify-content-center mb-5 mb-lg-0 mt-5 d-none" id="editor-row">
-                <div class="col-lg-5 col-md-5 col-12 original-text">
+            <div class="row justify-content-center mb-5 mb-lg-0 mt-5 d-none mx-1" id="editor-row">
+                <div class="col-lg-4 col-md-5 col-12 original-text">
                     <label><%- __('Captured Text')%></label>
                     <div id="captured-text">
                     </div>
                 </div>
-                <div class="form-group green-border-focus col-lg-5 col-md-5 col-12 m-0" id="edit-text">
+                <div class="form-group green-border-focus col-lg-4 col-md-5 col-12 m-0" id="edit-text">
                     <label><%- __('Your Edit') %></label>
+                    <div class="arrow-right"></div>
                     <textarea class="form-control edit-area" id="edit" rows="3"></textarea>
                 </div>
             </div>
@@ -81,48 +82,46 @@
                     </div>
                 </div>
             </div>
-            <div class="row justify-content-center mb-lg-7 mb-md-7 mb-sm-1 mx-5 mt-5" id="validation-button-row">
-                <div class="col-lg-8 col-md-8 flex-lg-row flex-md-row flex-column d-flex d-flex flex-row flex-wrap flex-lg-nowrap flex-md-nowrap justify-content-around mt-2">
-                    <button class="w-100 btn align-self-start mb-2" id="need_change">
-                        <svg width="245" height="66" viewBox="0 0 245 66" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M1 33C1 15.3269 15.3269 1 33 1H212C229.673 1 244 15.3269 244 33C244 50.6731 229.673 65 212 65H33C15.3269 65 1 50.6731 1 33Z" fill="white" stroke="#007BFF" stroke-width="2"/>
-                            <path d="M38.06 30.02L38.98 30.94L29.92 40H29V39.08L38.06 30.02ZM41.66 24C41.41 24 41.15 24.1 40.96 24.29L39.13 26.12L42.88 29.87L44.71 28.04C45.1 27.65 45.1 27.02 44.71 26.63L42.37 24.29C42.17 24.09 41.92 24 41.66 24ZM38.06 27.19L27 38.25V42H30.75L41.81 30.94L38.06 27.19Z" fill="#007BFF"/>
-                            <text x="60" y="43" font-family="lato" font-size="24" fill="#007BFF" style="text-align:center">
-                                <%= __('Needs Change') %>
-                            </text>
-                        </svg>
-                    </button>
-                    <button class="w-100 btn align-self-start mb-2 d-none" id="cancel-edit-button">
-                        <svg width="208" height="66" viewBox="0 0 208 66" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M1 33C1 15.3269 15.3269 1 33 1H175C192.673 1 207 15.3269 207 33C207 50.6731 192.673 65 175 65H33C15.3269 65 1 50.6731 1 33Z" fill="white" stroke="#007BFF" stroke-width="2"/>
-                            <text x="65" y="43" font-family="lato" font-size="24" fill="#343A40" style="text-align:center">
-                                <%= __('Cancel') %>
-                            </text>
-                        </svg>
-                    </button>
-                    <div class="row justify-content-center mx-2" id="loader-play-btn">
-                        <div><span class="spinner w-h-5"></span></div>
-                    </div>
-                    <button class="btn align-self-start mb-2 w-100" id="like_button">
-                        <svg width="208" height="66" viewBox="0 0 208 66" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <rect x="1" y="1" width="206" height="64" rx="32" fill="white" stroke="#007BFF" stroke-width="2"/>
-                            <path d="M34.5 37.5L42 43.5L57.5 26" stroke="#007BFF" stroke-width="3" stroke-linecap="round"/>
-                            <text x="80" y="43" font-family="lato" font-size="24" fill="#007BFF" style="text-align:center">
-                                <%= __('Correct') %>
-                            </text>
-                        </svg>
-                    </button>
-                    <button class="btn align-self-start mb-2 w-100 d-none" id="submit-edit-button">
-                        <svg width="208" height="66" viewBox="0 0 208 66" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <rect width="208" height="66" rx="33" fill="#D7D7D7"/>
-                            <text x="65" y="43" font-family="lato" font-size="24" fill="white" style="text-align:center">
-                                <%= __('Submit') %>
-                            </text>
-                        </svg>
+            <div class="row mt-5 justify-content-center mx-0" id="validation-button-row">
+                <button class="btn align-self-start mb-2" id="need_change">
+                    <svg width="245" height="66" viewBox="0 0 245 66" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M1 33C1 15.3269 15.3269 1 33 1H212C229.673 1 244 15.3269 244 33C244 50.6731 229.673 65 212 65H33C15.3269 65 1 50.6731 1 33Z" fill="white" stroke="#007BFF" stroke-width="2"/>
+                        <path d="M38.06 30.02L38.98 30.94L29.92 40H29V39.08L38.06 30.02ZM41.66 24C41.41 24 41.15 24.1 40.96 24.29L39.13 26.12L42.88 29.87L44.71 28.04C45.1 27.65 45.1 27.02 44.71 26.63L42.37 24.29C42.17 24.09 41.92 24 41.66 24ZM38.06 27.19L27 38.25V42H30.75L41.81 30.94L38.06 27.19Z" fill="#007BFF"/>
+                        <text x="60" y="43" font-family="lato" font-size="24" fill="#007BFF" style="text-align:center">
+                            <%= __('Needs Change') %>
+                        </text>
+                    </svg>
+                </button>
+                <button class="btn align-self-start mb-2 d-none" id="cancel-edit-button">
+                    <svg width="208" height="66" viewBox="0 0 208 66" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M1 33C1 15.3269 15.3269 1 33 1H175C192.673 1 207 15.3269 207 33C207 50.6731 192.673 65 175 65H33C15.3269 65 1 50.6731 1 33Z" fill="white" stroke="#007BFF" stroke-width="2"/>
+                        <text x="65" y="43" font-family="lato" font-size="24" fill="#343A40" style="text-align:center">
+                            <%= __('Cancel') %>
+                        </text>
+                    </svg>
+                </button>
 
-                    </button>
-                </div>
+                <button class="btn web-view"></button>
+                <button class="btn align-self-start mb-2" id="like_button">
+                    <svg width="208" height="66" viewBox="0 0 208 66" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <rect x="1" y="1" width="206" height="64" rx="32" fill="white" stroke="#007BFF" stroke-width="2"/>
+                        <path d="M34.5 37.5L42 43.5L57.5 26" stroke="#007BFF" stroke-width="3" stroke-linecap="round"/>
+                        <text x="80" y="43" font-family="lato" font-size="24" fill="#007BFF" style="text-align:center">
+                            <%= __('Correct') %>
+                        </text>
+                    </svg>
+                </button>
+                <button class="btn align-self-start mb-2 pl-4 d-none" id="submit-edit-button">
+                    <svg width="208" height="66" viewBox="0 0 208 66" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <rect width="208" height="66" rx="33" fill="#D7D7D7"/>
+                        <text x="65" y="43" font-family="lato" font-size="24" fill="white" style="text-align:center">
+                            <%= __('Submit') %>
+                        </text>
+                    </svg>
+
+                </button>
             </div>
+            
             <div class="row justify-content-center" id="skip_btn_row">
                 <button class="btn text-primary mt-2 mb-2 fs-1_5-rem" id="skip_button">
                     <%= __('Skip') %>
