--- a/crowdsource-ui/src/views/modules/sunoIndia/thankyouPage/thank-you.ejs
+++ b/crowdsource-ui/src/views/modules/sunoIndia/thankyouPage/thank-you.ejs
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://www.amcharts.com/lib/version/4.9.23/core.js"></script>
     <script src="https://www.amcharts.com/lib/version/4.9.23/charts.js"></script>
+    <link rel="stylesheet" type="text/css" href="../../css/sunoIndia/thankyou.css">
     <link rel="stylesheet" type="text/css" href="../../css/sunoIndia/home.css">
     <link rel="stylesheet" type="text/css" href="../../css/common/common.css">
 </head>
@@ -28,13 +29,6 @@
         <h1 class="display-5 font-wt-900 site-blue">
             <%= __('Thank you for contributing!') %>
         </h1>
-        <div id="contribution_text">
-            <h4 class="mb-3 thank-you-title mt-5 mt-lg-0"><%= __('WooHoo!! You took the first important step') %></h4>
-        </div>
-        <div id="before_badge_content" class="d-none">
-            <h4 class="mb-3 mt-5 mt-lg-0"><%- __('You are driving the spirit of your language') %></h4>
-        </div>
-        <p id="user-contribution-msg"><span id="user-contribution" class="text-primary"></span> <%= __('recordings contributed') %></p>
     </div>
 
     <div class="row mb-5 lazy">
@@ -55,19 +49,23 @@
             </div>
         </div>
     </div>
-    <div class="row justify-content-center mt-5">
-        <div class="col-lg-3 col-md-6 col-8 text-center">
-            <div class="mb-3">
-                <span><%- __('Help your language achieve it’s goal of <span id="language-hour-goal"></span> hrs. We know you can do more!') %></span>
+    <div class="row mt-5">
+        <div class="col-lg-8 offset-lg-2 border border-primary p-4-5 text-center overflow-hidden contribuion-info">
+            <div id="champion_text" class="champion-ribbon d-none">
+                <span class="marquee"><%= __('You are a champion') %></span>
             </div>
-            <a href="./record.html" class="btn btn-primary btn-lg h6 w-100">
-                <%= __('Contribute More') %>
-            </a>
-        </div>
-    </div>
-
-    <div class="row justify-content-center mt-5">
-        <div class="col-lg-3 col-md-6 col-8 text-center">
+            <div id="spree_text" class="spree-ribbon col-5 d-none">
+                <span class="marquee"><%= __('You are on a spree !!') %></span>
+            </div>
+            <div id="contribution_text" class="d-none">
+                <h4 class="mb-3 thank-you-title mt-5 mt-lg-0"><%= __('WooHoo!! You took the first important step') %></h4>
+            </div>
+            <div id="before_badge_content" class="d-none">
+                <h4 class="mb-3 mt-5 mt-lg-0"><%- __('You are driving the spirit of your language') %></h4>
+            </div>
+            <p id="user-contribution-msg"><span id="user-contribution" class="text-primary"></span> <%= __('recordings contributed') %></p>
+            <p id="sentence_away_msg"><%- __('You are just <span id="sentense_away_count"></span> sentences away from earning your <span id="next_badge_name"></span> Badge. <a href="../badges.html">Know more</a>') %></p>
+            <%- include ../common/badge_milestone.ejs %>
             <div class="mt-5 text-center">
                 <%= __('Share it with your friends and family') %>
             </div>
@@ -87,6 +85,30 @@
                     </a>
                 </div>
             </div>
+            <div class="badges_information">
+                <button class="m-0 p-0 btn border-0" disabled="disabled" data-badge="bronze" href="#" id="bronze_badge_link">
+                    <img title="Download Bronze Badge" src="../../img/bronze_badge.svg" alt="" width="36px" class="disable" id="bronze_badge_link_img">
+                </button>
+                <button class="m-0 p-0 btn border-0" disabled="disabled" data-badge="silver" href="#" id="silver_badge_link">
+                    <img title="Download Silver Badge" src="../../img/silver_badge.svg" alt="" width="36px" class="disable" id="silver_badge_link_img">
+                </button>
+                <button class="m-0 p-0 btn border-0" disabled="disabled" data-badge="gold" href="#" id="gold_badge_link">
+                    <img title="Download Gold Badge" src="../../img/gold_badge.svg" alt="" width="36px" class="disable" id="gold_badge_link_img">
+                </button>
+                <button class="m-0 p-0 btn border-0" disabled="disabled" data-badge="platinum" href="#" id="platinum_badge_link">
+                    <img title="Download Platinum Badge" src="../../img/platinum_badge.svg" alt="" width="36px" class="disable" id="platinum_badge_link_img">
+                </button>
+            </div>
+        </div>
+    </div>
+    <div class="row justify-content-center mt-5">
+        <div class="col-lg-3 col-md-6 col-8 text-center">
+            <div class="mb-3">
+                <span><%- __('Help your language achieve it’s goal of <span id="language-hour-goal"></span> hrs. We know you can do more!') %></span>
+            </div>
+            <a href="./record.html" class="btn btn-primary btn-lg h6 w-100">
+                <%= __('Contribute More') %>
+            </a>
         </div>
     </div>
 
