--- a/crowdsource-ui/src/views/modules/dekhoIndia/thankyouPage/thank-you.ejs
+++ b/crowdsource-ui/src/views/modules/dekhoIndia/thankyouPage/thank-you.ejs
@@ -32,24 +32,25 @@
     </div>
 
     <div class="row mb-5 lazy">
-        <div class="col-lg-12 col-md-11 col-lg-11 p-5 ml-lg-auto">
-            <div class="row m-0">
-                <div class="col-2"></div>
-                <div class="col-lg-3 col-md-3 col-sm-6 pl-0">
-                    <h4 class="h4 mb-4">
-                        <%= __('Your language and top 3 most contributed languages') %>
-                    </h4>
-                </div>
-                <div class="col-lg-6 col-md-9 col-sm-6">
-                    <div id="bar_charts_container">
-                  
-                        <div class="justify-content-center align-items-center d-none" id="topLanguageSpinner">
-                            <div><span class="spinner"></span></div>
-                        </div>
-                        <%- include ../common/horizontalBarGraph.ejs %>
+        <div class="col-12 col-md-11 col-lg-11 p-5 ml-lg-auto">
+            <div class="col-lg-3 col-md-3 col-sm-6">
+                <h4 class="h4 mb-4">
+                    <%= __('Top 5 most contributed languages') %>
+                </h4>
+                <div class="d-flex mb-3">
+                    <div name="topLanguageChart" id="hours_chart" value="hours">
+                        <%= __('Hours transcribed and corrected') %>
                     </div>
                 </div>
-                <div class="col-1"></div>
+            </div>
+            <div class="col-lg-9 col-md-9 col-sm-6">
+                <div id="bar_charts_container">
+              
+                    <div class="justify-content-center align-items-center d-none" id="topLanguageSpinner">
+                        <div><span class="spinner"></span></div>
+                    </div>
+                    <%- include ../common/horizontalBarGraph.ejs %>
+                </div>
             </div>
         </div>
     </div>
