Ayush | Done with home and dashboard api and UI fixes

--- a/crowdsource-ui/src/assets/css/dashboard.css
+++ b/crowdsource-ui/src/assets/css/dashboard.css
@@ -284,6 +284,10 @@ body.modal-open .supreme-container {
     .contribution-data {
         border-right: 1px dashed #C4C4C4;
     }
+
+.contribution-data:last-child {
+    border: none;
+}
     .no-data-found {
         left: 14%;
     }
