--- a/crowdsource-ui/src/views/common/buttons/viewAllDetailBtn/viewAllDetailBtn.ejs
+++ b/crowdsource-ui/src/views/common/buttons/viewAllDetailBtn/viewAllDetailBtn.ejs
@@ -1,6 +1,6 @@
 <div class="row mt-5 mb-5" id="view_all_btn">
     <div class="col-12 d-flex justify-content-center">
-        <a href="<%= DASHBOARD %>" id="viewAllDetailsBtn" class="btn btn-outline-primary text-primary">
+        <a href="<%= DASHBOARD %>" id="viewAllDetailsBtn" class="btn btn-outline-primary text-primary py-2 px-4" style="border-radius:20px">
             <%= __('VIEW ALL DETAILS') %>
         </a>
     </div>
