--- a/crowdsource-ui/src/views/common/contributionStats/contributionStats.ejs
+++ b/crowdsource-ui/src/views/common/contributionStats/contributionStats.ejs
@@ -1,5 +1,5 @@
 <link rel="preload" as="style" onload='this.onload=null,this.rel="stylesheet"' type="text/css" href="../../css/common/contributionStats.css">
-<div class="contribution-data d-none" id="languages-wrapper">
+<div class="contribution-data">
     <p class="mb-1" id="languages-value"></p>
     <p class="mb-0">
         <%= __(labels[0]) %>
@@ -17,7 +17,7 @@
         <%= __(labels[2]) %>
     </p>
 </div>
-<div class="contribution-data">
+<div class="contribution-data border-0">
     <p class="mb-1" id="validated-value"></p>
     <p class="mb-0">
         <%= __(labels[3]) %>
