--- a/crowdsource-ui/src/views/modules/sunoIndia/dashboard/dashboard.ejs
+++ b/crowdsource-ui/src/views/modules/sunoIndia/dashboard/dashboard.ejs
@@ -22,6 +22,9 @@
     <div class="row">
         <div class="col-12">
             <div class="row">
+                <%- include('../common/back-btn.ejs',{url:"./home.html"}) %>
+            </div>
+            <div class="row">
                 <div class="col-12 col-md-7 col-lg-6">
                     <div class="text-muted mb-2">
                         <%= __('Select a language') %>:
