--- a/crowdsource-ui/src/views/modules/sunoIndia/home/home.ejs
+++ b/crowdsource-ui/src/views/modules/sunoIndia/home/home.ejs
@@ -46,7 +46,7 @@
                         <div><span class="spinner"></span></div>
                     </div>
                     <div class="row text-center contribution-details" id="contribution-details">
-                        <%- include('../common/contributionStats.ejs',{labels :['Languages','People participated','Hrs transcribed','Hrs corrected']}) %>
+                        <%- include('../common/contributionStats.ejs',{labels :['Languages pairs','People participated','Hrs transcribed','Hrs corrected']}) %>
                     </div>
                 </div>
             </div>
@@ -56,7 +56,7 @@
         <div class="col-12 col-md-11 col-lg-11 p-5 ml-lg-auto">
             <div id="bar_charts_container">
                 <h4 class="h4 mb-4">
-                    <%= __('Top 5 most contributed languages') %>
+                    <%= __('Your language and top 3 most contributed languages') %>
                 </h4>
                 <div class="d-flex mb-3">
                     <div name="topLanguageChart" id="hours_chart" value="hours">
