Ayush | Add keyboard instructions modal

--- a/crowdsource-ui/src/views/home.ejs
+++ b/crowdsource-ui/src/views/home.ejs
@@ -96,7 +96,7 @@
             <div id="listen_container" class="row position-relative align-items-center py-lg-5 col-10 card_container px-0" style="height:100%">
                 <div class="col-8 px-0">
                     <h1 class="display-5">
-                        <%= __('Listen') %>
+                        <%= __('Validate') %>
                     </h1>
                     <div class="mt-3 font-weight-bold">
                         <%= __('Validate What They Say') %>
