--- a/crowdsource-ui/src/views/modules/dekhoIndia/validation/validator-prompt-page.ejs
+++ b/crowdsource-ui/src/views/modules/dekhoIndia/validation/validator-prompt-page.ejs
@@ -142,6 +142,10 @@
                 </div>
             </div>
 
+            <div class="row my-3 p-3" style="justify-content:flex-end">
+                <%- include ../common/changeKeyboard.ejs %>
+            </div>
+
         </div>
 
         <%- include('../common/report.ejs',{"REPORT":[{h1:"Offensive",p1:"Hateful / Discriminatory / Vulgar language, drugs promotion etc."}]}); %>
